Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "metauml.doc.tar.xz": e0e7f80c70de92c1aa47c1eeb188859a17b58efc
-  "metauml.tar.xz": 321944c45c51e64e3db00c3013734c07a4aa44c3
+  metauml.doc.r49923.tar.xz: 656eea968ed4d6988131f2e16129edb8115a3ed8
+  metauml.r49923.tar.xz: b86b128be20d264ada282a976b0abcefe8eea65a
